# m3u_copy_gui

./: README.md  m3u_copy_gui.py  main.py  pyproject.toml
.github/workflows/: ruff.yml
