[tool.poetry]
name = "m3u-copy-gui"
version = "0.1.0"
description = "Program that copies music files provided in m3u file to designated directory."
authors = ["Szymon Bańczyk <sbanczyk02@interia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
